fixed picotable overflow

--- a/shuup/admin/static_src/base/scss/shuup/picotable.scss
+++ b/shuup/admin/static_src/base/scss/shuup/picotable.scss
@@ -1,4 +1,7 @@
 #picotable {
+    .table-view{
+        overflow: scroll;
+    }
     .table {
         margin-top: 1rem;
         background-color: $white;
